// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomePage /> renders home page 1`] = `
<div
  className="Home"
>
  <div>
    <Row
      bsClass="row"
      className="first"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={7}
      >
        <Jumbotron
          bsClass="jumbotron"
          componentClass="div"
        >
          <h1>
            Platters
          </h1>
          <p>
            An album collection web application developed using modern web technologies.
          </p>
          <div
            className="text-center"
          >
            <Link
              className="btn btn-success btn-lg"
              replace={false}
              to="/about"
            >
              About
            </Link>
            <Link
              className="btn btn-success btn-lg spacer-left-tiny"
              replace={false}
              to="/sign_up"
            >
              Sign Up
            </Link>
          </div>
        </Jumbotron>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={5}
      >
        <div
          className="logo"
        >
          <img
            alt="Platters"
            className="img-responsive center-block"
            src="platters-black.svg"
          />
        </div>
      </Col>
    </Row>
    <Row
      bsClass="row"
      className="dark"
      componentClass="div"
    >
      <h2>
        Prime technologies used by the Platters application.
      </h2>
      <Col
        bsClass="col"
        className="text-center"
        componentClass="div"
        md={4}
      >
        <FontAwesome
          name="code"
        />
        <p>
          React JavaScript front-end user interface library
        </p>
      </Col>
      <Col
        bsClass="col"
        className="text-center"
        componentClass="div"
        md={4}
      >
        <FontAwesome
          name="diamond"
        />
        <p>
          Ruby on Rails back-end API server
        </p>
      </Col>
      <Col
        bsClass="col"
        className="text-center"
        componentClass="div"
        md={4}
      >
        <FontAwesome
          name="tablet"
        />
        <p>
          Bootstrap responsive front-end web framework.
        </p>
      </Col>
      <div
        className="complete-details text-center"
      >
        <Link
          className="btn btn-success"
          replace={false}
          to="/details"
        >
          Complete Details
        </Link>
      </div>
    </Row>
  </div>
  <div
    className="album-of-the-day"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={12}
      >
        <h2
          className="page-header"
        >
          Album of the day - 
          <Link
            replace={false}
            to="/artist/xyz/album/album_of_the_day"
          >
            Album of the Day
          </Link>
           
          <small>
            by 
            <Link
              replace={false}
              to="/artist/xyz"
            >
              XYZ
            </Link>
          </small>
        </h2>
        <Jumbotron
          bsClass="jumbotron"
          componentClass="div"
        >
          <img
            alt="Album of the Day"
            className="img-responsive center-block"
            src="http://localhost:3000/uploads/album/cover/832/XYZ--Album_of_the_Day.jpg"
          />
        </Jumbotron>
      </Col>
    </Row>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={12}
    >
      <h2
        className="page-header"
      >
        New Albums
      </h2>
      <AlbumsList
        albums={
          Array [
            Object {
              "album_slug": "abc",
              "artist": "ABC-Artist",
              "artist_slug": "abc_artist",
              "comments_count": 41,
              "cover_url": "http://localhost:3000/uploads/album/cover/1/small_abc--abc.jpg",
              "genre": "Rock",
              "id": 1,
              "title": "ABB",
              "tracks": Array [
                "1. First",
                "2. Second",
                "3. Third",
                "4. Fourth",
                "5. Fifth",
                "6. Sixth",
                "...",
              ],
              "tracks_count": 11,
              "year": 2008,
            },
            Object {
              "album_slug": "def",
              "artist": "DEF-Artist",
              "artist_slug": "def_artist",
              "comments_count": 44,
              "cover_url": "http://localhost:3000/uploads/album/cover/978/small_def--def.jpg",
              "genre": "Classical",
              "id": 2,
              "title": "DEF",
              "tracks": Array [
                "1. One",
                "2. Two",
              ],
              "tracks_count": 27,
              "year": 2015,
            },
          ]
        }
        onGenre={[Function]}
        onYear={[Function]}
      />
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={12}
    >
      <h2
        className="page-header"
      >
        New Comments
      </h2>
      <CommentsList
        comments={
          Map {
            20 => Object {
              "artist": "ABC-Artist",
              "body": "A comment",
              "created_at": "<time datetime=\\"2018-04-22T05:50:26Z\\" data-local=\\"time-ago\\">April 22, 2018  5:50am</time>",
              "for": "Artist",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 20,
              "name": "ABC-Artist",
              "path": "artist/abc_artist",
              "user_name": "user1",
              "user_slug": "user1",
            },
            21 => Object {
              "artist": "ABC-Artist",
              "body": "Another comment",
              "created_at": "<time datetime=\\"2018-04-22T05:12:25Z\\" data-local=\\"time-ago\\">April 22, 2018  5:12am</time>",
              "for": "Artist",
              "gravatar_url": "https://gravatar.com/avatar/699b7e1dd13a6638d847f2d7acf94843?s=80&r=pg&d=identicon",
              "id": 21,
              "name": "ABC-Artist",
              "path": "artist/abc_artist",
              "user_name": "admin",
              "user_slug": "admin",
            },
            22 => Object {
              "artist": "ABC",
              "body": "A final comment",
              "created_at": "<time datetime=\\"2018-04-14T04:29:39Z\\" data-local=\\"time-ago\\">April 14, 2018  4:29am</time>",
              "for": "Album",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 22,
              "name": "ABC",
              "path": "artist/abc_artist/album/abc",
              "user_name": "user1",
              "user_slug": "user1",
            },
          }
        }
        onDeleteComment={[Function]}
      />
    </Col>
  </Row>
</div>
`;

exports[`<HomePage /> renders home page when logged in 1`] = `
<div
  className="Home"
>
  <div
    className="album-of-the-day"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={12}
      >
        <h2
          className="page-header"
        >
          Album of the day - 
          <Link
            replace={false}
            to="/artist/xyz/album/album_of_the_day"
          >
            Album of the Day
          </Link>
           
          <small>
            by 
            <Link
              replace={false}
              to="/artist/xyz"
            >
              XYZ
            </Link>
          </small>
        </h2>
        <Jumbotron
          bsClass="jumbotron"
          componentClass="div"
        >
          <img
            alt="Album of the Day"
            className="img-responsive center-block"
            src="http://localhost:3000/uploads/album/cover/832/XYZ--Album_of_the_Day.jpg"
          />
        </Jumbotron>
      </Col>
    </Row>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={12}
    >
      <h2
        className="page-header"
      >
        New Albums
      </h2>
      <AlbumsList
        albums={
          Array [
            Object {
              "album_slug": "abc",
              "artist": "ABC-Artist",
              "artist_slug": "abc_artist",
              "comments_count": 41,
              "cover_url": "http://localhost:3000/uploads/album/cover/1/small_abc--abc.jpg",
              "genre": "Rock",
              "id": 1,
              "title": "ABB",
              "tracks": Array [
                "1. First",
                "2. Second",
                "3. Third",
                "4. Fourth",
                "5. Fifth",
                "6. Sixth",
                "...",
              ],
              "tracks_count": 11,
              "year": 2008,
            },
            Object {
              "album_slug": "def",
              "artist": "DEF-Artist",
              "artist_slug": "def_artist",
              "comments_count": 44,
              "cover_url": "http://localhost:3000/uploads/album/cover/978/small_def--def.jpg",
              "genre": "Classical",
              "id": 2,
              "title": "DEF",
              "tracks": Array [
                "1. One",
                "2. Two",
              ],
              "tracks_count": 27,
              "year": 2015,
            },
          ]
        }
        onGenre={[Function]}
        onYear={[Function]}
      />
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={12}
    >
      <h2
        className="page-header"
      >
        New Comments
      </h2>
      <CommentsList
        comments={
          Map {
            20 => Object {
              "artist": "ABC-Artist",
              "body": "A comment",
              "created_at": "<time datetime=\\"2018-04-22T05:50:26Z\\" data-local=\\"time-ago\\">April 22, 2018  5:50am</time>",
              "for": "Artist",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 20,
              "name": "ABC-Artist",
              "path": "artist/abc_artist",
              "user_name": "user1",
              "user_slug": "user1",
            },
            21 => Object {
              "artist": "ABC-Artist",
              "body": "Another comment",
              "created_at": "<time datetime=\\"2018-04-22T05:12:25Z\\" data-local=\\"time-ago\\">April 22, 2018  5:12am</time>",
              "for": "Artist",
              "gravatar_url": "https://gravatar.com/avatar/699b7e1dd13a6638d847f2d7acf94843?s=80&r=pg&d=identicon",
              "id": 21,
              "name": "ABC-Artist",
              "path": "artist/abc_artist",
              "user_name": "admin",
              "user_slug": "admin",
            },
            22 => Object {
              "artist": "ABC",
              "body": "A final comment",
              "created_at": "<time datetime=\\"2018-04-14T04:29:39Z\\" data-local=\\"time-ago\\">April 14, 2018  4:29am</time>",
              "for": "Album",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 22,
              "name": "ABC",
              "path": "artist/abc_artist/album/abc",
              "user_name": "user1",
              "user_slug": "user1",
            },
          }
        }
        onDeleteComment={[Function]}
      />
    </Col>
  </Row>
</div>
`;
